objects/Zendesk__ZendeskLog__c.object
<CustomObject>
    <fields>
        <fullName>Zendesk__DateTime__c</fullName>
        <label>Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Endpoint__c</fullName>
        <label>Endpoint</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Method__c</fullName>
        <label>Method</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__RequestBody__c</fullName>
        <label>Request Body</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__RequestHeader__c</fullName>
        <label>Request Header</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Resource__c</fullName>
        <label>Resource</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__ResponseCode__c</fullName>
        <label>Response Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Response__c</fullName>
        <label>Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Integration Log</label>
    <listViews>
        <fullName>Zendesk__This_Week</fullName>
        <columns>NAME</columns>
        <columns>Zendesk__DateTime__c</columns>
        <columns>Zendesk__ResponseCode__c</columns>
        <columns>Zendesk__Description__c</columns>
        <columns>Zendesk__Method__c</columns>
        <columns>Zendesk__Resource__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Zendesk__Endpoint__c</columns>
        <columns>Zendesk__RequestBody__c</columns>
        <columns>Zendesk__RequestHeader__c</columns>
        <columns>Zendesk__Response__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Zendesk:  This Week</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>LOG-{YYYY}{MM}{DD}-{0000000}</displayFormat>
        <label>Zintegration Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>